<resources>
    <string name="app_name">App_1</string>

    <string name="COST_LABLE">Enter Cost/Price:</string>
    <string name="MONEY_LABLE">Enter Sales Tax %:</string>
    <string name="input1"/>
    <string name="input2"/>
    <string name="hint1">$</string>
    <string name="hint2">%</string>
    <string name="Output_tax">0</string>
    <string name="total_taxlabel">Total Tax:</string>
    <string name="total_costlabel">Total Cost/Price:</string>
    <string name="output_cost">0</string>
    <string name="Bill_label">Bill Amount</string>
    <string name="tip_label">Tip</string>
    <string name="Bill_input">$</string>
    <string name="Tip_input">%</string>
    <string name="slip_label">Slip Bill</string>
    <string name="Check_box"/>
    <string name="bt_label">Between</string>
    <string name="Between_input">person</string>
    <string name="calculator_label">Calculator</string>
    <string name="totalT_label">Tip Amount</string>
    <string name="totalP.label">Total Price</string>
    <string name="person">Per Person</string>
    <string name="TA">0</string>
    <string name="TP">0</string>
    <string name="input_unit_text">From</string>
    <string name="output_unit_text">To</string>
    <string name="result_text">0</string>
    <string name="unitEditText">Enter here</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="tax">TAX</string>
    <string name="bmi">BMI</string>
    <string name="tips">TIPS</string>

    <string name="heightLbl">Height</string>
    <string name="weightLbl">Weight</string>
    <string name="heightStandardHint">5 ft</string>
    <string name="heightStandardHintExtra">5 inches</string>
    <string name="weightStandardHint">130 lbs</string>

    <string name="heightMetricHint">100 cm</string>
    <string name="weightMetricHint">20 kg</string>

    <string name="bmiLbl">BMI:</string>
    <string name="bmiResults">0</string>
    <string name="bmiCategory">Category</string>

    <string name="teamName">Team TDB</string>
    <string name="memberOne">Danh Pham</string>
    <string name="memberTwo">Thomas Ngo</string>
    <string name="memberThree">Brian Cabantug</string>
    <string name="welcomeText">Welcome to the multi calculator application! This app contains 4 different calculators: Tax, Tip, Unit Conversion, and Body Mass Index (BMI). To select a calculator, click on one of them in the top right corner or under the menu in the action bar. Here are the instructions for each:</string>
    <string name="instructionsTax">Enter the subtotal and the tax percentage. The tax amount will be displayed as well as the full total.</string>
    <string name="instructionsBMI">Select the system of units(default set to Standard). Enter the height(feet and inches for standard/cm for metric) and weight(pounds for standard/kg for metric). The BMI number and category will display.</string>
    <string name="instructionsUnitConversion">Select the units on the left side FIRST. Then enter the amount being converted. Then select the unit to convert to. It will display the calculated conversion.</string>
    <string name="instructionsTip">Enter the subtotal and the percentage you want to tip. The tip amount will be shown. Select the split bill for multiple people and enter the amount of people to show how much each person pays for tip.</string>
</resources>
