<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">

    <TextView
            android:id="@+id/output_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Output_tax"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintVertical_bias="0.723"/>

    <TextView
            android:id="@+id/linklable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MONEY_LABLE"
            app:layout_constraintBaseline_toBaselineOf="@+id/tax_input"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/cost_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"
            android:text="@string/input1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/tax_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint2"
            android:inputType="numberDecimal"
            android:text="@string/input2"
            app:layout_constraintEnd_toEndOf="@+id/cost_input"
            app:layout_constraintTop_toBottomOf="@+id/cost_input"
            tools:ignore="Autofill"/>

    <TextView
            android:id="@+id/datalable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/COST_LABLE"
            app:layout_constraintBaseline_toBaselineOf="@+id/cost_input"
            app:layout_constraintStart_toStartOf="parent"/>

    <android.support.constraint.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="linklable,datalable"
            tools:layout_editor_absoluteX="384dp"
            tools:layout_editor_absoluteY="151dp"
            tools:ignore="MissingConstraints"/>

    <android.support.constraint.Barrier
            android:id="@+id/barrier8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="linklable,datalable"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="511dp"
            tools:ignore="MissingConstraints"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/output_tax" android:layout_marginStart="16dp"
            android:text="@string/total_taxlabel"/>
    <TextView
            android:text="@string/total_costlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView2"
            app:layout_constraintBaseline_toBaselineOf="@+id/output_cost"/>
    <TextView
            android:text="@string/output_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/output_cost" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/output_tax" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/barrier4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="0.954"
            android:textSize="24sp"/>

</android.support.constraint.ConstraintLayout>