<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/scrollMain"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" android:layout_marginRight="4dp" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:scrollbarStyle="insideOverlay"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:addStatesFromChildren="false"
                      android:scrollbars="vertical" android:id="@+id/linear">
            <TextView
                    android:text="@string/teamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/mainInstructionSet" android:layout_marginTop="11dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp" android:textStyle="bold" android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="30sp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.0" android:gravity="center"/>
            <TextView
                    android:text="@string/memberTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="13dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp" android:textStyle="bold" android:textColor="@color/colorAccent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.189" android:gravity="center"/>
            <TextView
                    android:text="@string/memberOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/textView11" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="13dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp" android:textStyle="bold" android:textColor="@color/colorAccent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.097" android:gravity="center"/>
            <TextView
                    android:text="@string/memberThree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/textView4" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="13dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp" android:textStyle="bold" android:textColor="@color/colorAccent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="20sp"
                    app:layout_constraintVertical_bias="0.281" android:gravity="center"/>
            <TextView
                    android:text="@string/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    app:fontFamily="sans-serif"
                    android:layout_marginTop="14dp" app:layout_constraintTop_toTopOf="@+id/scrollMain"
                    android:layout_marginBottom="15dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.822" android:padding="5sp"
                    android:gravity="center" app:layout_constraintEnd_toEndOf="@+id/scrollMain"
                    app:layout_constraintStart_toStartOf="@+id/scrollMain" android:textSize="14sp"/>
            <TextView
                    android:text="@string/tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:gravity="center"
                    android:padding="8dp" android:textSize="18sp"/>
            <TextView
                    android:text="@string/instructionsTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView12" android:textSize="14sp"/>
            <TextView
                    android:text="@string/bmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView14" android:padding="8dp"
                    android:gravity="center" android:textSize="18sp"/>
            <TextView
                    android:text="@string/instructionsBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView15"/>
            <TextView
                    android:text="@string/unit_converter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView16" android:padding="8dp"
                    android:gravity="center" android:textSize="18sp"/>
            <TextView
                    android:text="@string/instructionsUnitConversion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView17"/>
            <TextView
                    android:text="@string/tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView18" android:padding="8dp"
                    android:gravity="center" android:textSize="18sp"/>
            <TextView
                    android:text="@string/instructionsTax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView19"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>