<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tips">

    <TextView
            android:text="@string/TP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PTP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="167dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="167dp" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/TA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PTA" app:layout_constraintStart_toStartOf="@+id/PTP"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/PTP"/>
    <TextView
            android:text="@string/TP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TP" app:layout_constraintStart_toStartOf="@+id/PTA"
            android:layout_marginTop="74dp" app:layout_constraintBottom_toBottomOf="@+id/PTA"
            app:layout_constraintTop_toBottomOf="@+id/calculator" android:layout_marginBottom="74dp"/>
    <TextView
            android:text="@string/TA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TA" app:layout_constraintStart_toStartOf="@+id/TP"
            android:layout_marginBottom="28dp" app:layout_constraintBottom_toTopOf="@+id/TP"/>
    <TextView
            android:text="@string/totalP.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/TP"/>
    <TextView
            android:text="@string/totalT_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/TA"/>
    <TextView
            android:text="@string/totalP.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="30dp"/>
    <TextView
            android:text="@string/totalT_label"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="61dp"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginBottom="63dp"/>
    <TextView
            android:text="@string/person"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/textView8" android:textSize="18sp"
            android:textColor="@color/colorPrimary" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.813"/>
    <TextView
            android:text="@string/Bill_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bill_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/bill_input" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/tip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/tip_input" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/bill_input"
            android:hint="@string/Bill_input" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tip_input"
            android:hint="@string/Tip_input" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bill_input"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/slip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintHorizontal_bias="1.0"/>
    <CheckBox
            android:text="@string/Check_box"
            android:layout_width="31dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"/>
    <Button
            android:text="@string/calculator_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculator"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.498"
            app:layout_constraintStart_toEndOf="@+id/barrier" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/bt_label"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/bt_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/between_input"
            app:layout_constraintStart_toEndOf="@+id/barrier" android:layout_marginLeft="76dp"
            android:layout_marginStart="76dp"/>
    <EditText
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/between_input" android:hint="@string/Between_input"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="end"
                                        app:constraint_referenced_ids="bill_label,tip_label,textView5,textView6,textView7,textView10,textView9,textView8"
                                        tools:layout_editor_absoluteX="384dp" tools:ignore="MissingConstraints"/>
</android.support.constraint.ConstraintLayout>